Add Cloudflare routes for jj-track-test.site
Configure Wrangler routes for new apex and www domains on Cloudflare.

Made-with: Cursor

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -23,5 +23,15 @@
   "r2_buckets": [],
   "images": {
     "binding": "IMAGES"
-  }
+  },
+  "routes": [
+    {
+      "pattern": "jj-track-test.site",
+      "custom_domain": true
+    },
+    {
+      "pattern": "www.jj-track-test.site",
+      "custom_domain": true
+    }
+  ]
 }
